[package]
name = "daph"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
env_logger = "0.11.8"
home = "0.5.11"
lofty = "0.22.4"
log = "0.4.27"
rand = "0.9.2"
ratatui = "0.29.0"
rodio = "0.20.1"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.9.5"
walkdir = "2.5.0"
